package Assignment1;

    public interface Playable {
        void play();
        String getTitle();
        int getDurationSeconds();
    }
